Fix webkit double scrollbar issue with OS X lion

--- a/bin/css/nanoscroller.css
+++ b/bin/css/nanoscroller.css
@@ -1,4 +1,7 @@
 /** initial setup **/
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
 .nano {
   position : relative;
   width    : 100%;
